the banner image was interfaring with header elements. now it is fixed with z-index. In addition, the company logos are now linked to their website which will be opened in a new tab when it is clicked.

--- a/assets/scss/layouts/_banner.scss
+++ b/assets/scss/layouts/_banner.scss
@@ -147,10 +147,13 @@
                     gap: 33px;
 
                     li{
-                        img{
-                            width: auto;
-                            height: 26px;
-                            flex-shrink: 0;
+                        a{
+
+                            img{
+                                width: auto;
+                                height: 26px;
+                                flex-shrink: 0;
+                            }
                         }
 
 
@@ -200,9 +203,11 @@
                 }
 
                 img{
+                    
 
                     @include custom_responsive(0px, 991.9px){
                         width: 40vw;
+
                     }
                 }
 
